add better error handling

--- a/events_app/templates/create.html
+++ b/events_app/templates/create.html
@@ -16,7 +16,11 @@
             <textarea name="description"></textarea>
         </label>
     </p>
+    {% if error %}
+        <p class="error">Error: {{ error }}</p>
+    {% endif %}
     <p>
+        
         <label>
             Date and Time: <br>
             <input type="date" name="date" placeholder="Date format YYYY-mm-dd">
