edited events & guests

--- a/events_app/templates/event_detail.html
+++ b/events_app/templates/event_detail.html
@@ -4,19 +4,17 @@
 
 <a href="/">Home</a>
 
+<h1>{{ event.title }}</h1>
+
+<p>{{ event.description}}</p>
 <!-- 
     TODO: Instead of the hard-coded values, use the event object to display the
     correct title, description, date, time, and number of guests
 -->
+<p><strong>Date:</strong>{{ event.date_and_time.strftime('%B %d, %Y') }}</p>
+<p><strong>Time:</strong>{{ event.date_and_time.strftime('%I:%M %p') }}</p>
 
-<h1>Zoom Party!</h1>
-
-<p>Come join us for some fun zoom games!</p>
-
-<p><strong>Date:</strong> Friday March 5, 2021</p>
-<p><strong>Time:</strong> 5:00 PM</p>
-
-<p><strong>Number of Guests:</strong> 5</p>
+<p><strong>Number of Guests:</strong>{{ event.guests|length }}</p>
 
 <form method="POST">
     <fieldset>
@@ -60,11 +58,11 @@
 
 <h2>Guests Attending:</h2>
 <ul>
-    
-    <li><a href="/guest/1">Meredith</a></li>
-    <li><a href="/guest/2">Dani</a></li>
-    <li><a href="/guest/3">Jordan</a></li>
-    <li><a href="/guest/4">Ducky</a></li>
+    {% for guest in event.guests %}
+        <li><a href="{{ url_for('main.guest_detail', guest_id=guest.id) }}">{{ guest.name}}</a></li>
+    {% else %}
+        <li>No guests yet!</li>
+    {% endfor %}
 </ul>
 
 {% endblock %}
