--- a/events_app/templates/index.html
+++ b/events_app/templates/index.html
@@ -6,29 +6,17 @@
 
 <a href="/create">+ New Event</a>
 
-<!-- 
-    TODO: Use the event objects to display the correct information (and take 
-    out the hardcoded values)
--->
-
 <div class="event-container">
-    <h3><a href="/event/1">Zoom Party!</a></h3>
-    <p><strong>Date and Time:</strong> Friday March 5, 2021 at 5:00 PM</p>
-    <p><strong>Description:</strong> Come join us for some fun zoom games!</p>
-    <p class="small-text">
-        5 attending
-    </p>
+    {% for event in all_events %}
+        <div class="event-card">
+            <h3><a href="/event/{{ event.id }}">{{ event.title }}</a></h3>
+            <p><strong>Date and Time:</strong> {{ event.date_and_time.strftime('%B %d, %Y') }} at {{ event.date_and_time.strftime('%I:%M %p') }}</p>
+            <p><strong>Description:</strong> {{ event.description }}</p>
+            <p class="small-text">
+                Guests attending: {{ event.guests|length }}
+            </p>
+        </div>
+    {% endfor %}
 </div>
-
-<div class="event-container">
-    <h3><a href="/event/2">Picnic at the Park</a></h3>
-    <p><strong>Date:</strong> Saturday June 12, 2021 at 2:00 PM</p>
-    <p><strong>Description:</strong> Bring a picnic blanket and meet new people!</p>
-    <p class="small-text">
-        10 attending
-    </p>
-</div>
-
-
 
 {% endblock %}
